# MyPacman

./: CMakeLists.txt  README.md  gameStructures_fwd.hpp  pacman.cpp
LePrimeFasi/: backUpPostRipresa.cpp  postInterazioneMappa.cpp
VersioniIntermedie/animazioniFantasmi/: functions.cpp  functions.hpp  gameStructures.hpp  pacman.cpp
VersioniIntermedie/disegnoFantasmi_02/: pacman.cpp
VersioniIntermedie/diversaFrutta_19/: functions.cpp  functions.hpp  textures.hpp
VersioniIntermedie/fixTunnel_16/: functions.hpp
VersioniIntermedie/movimentoPinky_06/: gameStructures.hpp
VersioniIntermedie/movimentoPrimoFantasma_03/: pacman.cpp
VersioniIntermedie/movimentoRedSbagliato_04/: gameStructures_fwd.hpp  pacman.cpp
VersioniIntermedie/postRiordine_01/progetto/: functions.hpp  pacman.cpp
VersioniIntermedie/riordinateFunzioni_17/: functions.cpp  functions.hpp
VersioniIntermedie/suoni_12/: gameStructures_fwd.hpp  textures.hpp
animazioniFantasmi/: textures.hpp
animazioniPacman/: gameStructures.hpp  pacman.cpp
animazioniPacman_11/: handlers.cpp
disegnoFantasmi/: functions.cpp  functions.hpp  gameStructures.hpp  gameStructures_fwd.hpp  handlers.cpp
diversaFrutta/: handlers.cpp
fixTunnel/: gameStructures.hpp  gameStructures_fwd.hpp  pacman.cpp  textures.hpp
frutta/: functions.cpp  functions.hpp  gameStructures.hpp
highScore_vite/: functions.hpp  gameStructures.hpp
highScore_vite_15/: functions.cpp  pacman.cpp
livelli/: functions.cpp  functions.hpp  pacman.cpp
livelli_18/: gameStructures.hpp
movimentoGiustoRed/: functions.cpp  functions.hpp
movimentoOrange/: functions.cpp  functions.hpp
movimentoPinky/: functions.cpp  functions.hpp  gameStructures_fwd.hpp
movimentoPinky_06/: pacman.cpp
movimentoPrimoFantasma/: functions.cpp  functions.hpp  gameStructures.hpp
movimentoRedSbagliato/: functions.cpp  functions.hpp  gameStructures.hpp
postRiordine/progetto/: gameStructures.hpp
postRiordine/progetto/RisorseProgetto/Backup/: postGameover.cpp
postRiordine_01/progetto/: functions.cpp
progetto/: functions.cpp  gameStructures.hpp  pacman.cpp
progetto/Tappa00_LePrimeFasi/: mappaScartata.cpp
progetto/Tappa01_PostRiordine/progetto/: gameStructures.hpp  pacman.cpp
progetto/Tappa02_DisegnoFantasmi/: pacman.cpp
progetto/Tappa05_movimentoGiustoRed/: handlers.cpp
progetto/Tappa08_raffinamentoFantasmi/: gameStructures.hpp
progetto/Tappa09_superDots/: gameStructures.hpp  pacman.cpp
progetto/Tappa12_suoni/: pacman.cpp
progetto/Tappa13_punteggio/: gameStructures.hpp  handlers.cpp  pacman.cpp
progetto/Tappa14_frutta/: gameStructures.hpp  pacman.cpp
progetto/Tappa17_riordinateFunzioni/: pacman.cpp
progetto/Tappa20_Ultima/: textures.hpp
progetto/VersioniIntermedie/animazioniPacman_11/: functions.cpp  functions.hpp  gameStructures.hpp  pacman.cpp
progetto/VersioniIntermedie/disegnoFantasmi_02/: gameStructures.hpp
progetto/VersioniIntermedie/diversaFrutta_19/: gameStructures.hpp
progetto/VersioniIntermedie/fixTunnel_16/: functions.cpp  gameStructures.hpp  pacman.cpp
progetto/VersioniIntermedie/frutta_14/: pacman.cpp
progetto/VersioniIntermedie/highScore_vite_15/: gameStructures.hpp  pacman.cpp
progetto/VersioniIntermedie/livelli_18/: gameStructures.hpp  pacman.cpp
progetto/VersioniIntermedie/movimentoGiustoRed_05/: gameStructures.hpp
progetto/VersioniIntermedie/movimentoOrange_07/: gameStructures.hpp
progetto/VersioniIntermedie/movimentoPinky_06/: pacman.cpp
progetto/VersioniIntermedie/movimentoPrimoFantasma_03/: gameStructures.hpp  pacman.cpp
progetto/VersioniIntermedie/movimentoRedSbagliato_04/: gameStructures.hpp  pacman.cpp
progetto/VersioniIntermedie/postRiordine_01/progetto/: handlers.cpp
progetto/VersioniIntermedie/punteggio_13/: functions.cpp  gameStructures.hpp  gameStructures_fwd.hpp
progetto/VersioniIntermedie/raffinamentoFantasmi_08/: pacman.cpp
progetto/VersioniIntermedie/riordinateFunzioni_17/: gameStructures.hpp
progetto/VersioniIntermedie/siMuovonoTutti_10/: pacman.cpp
progetto/VersioniIntermedie/suoni_12/: gameStructures.hpp
progetto/VersioniIntermedie/superDots_09/: gameStructures.hpp
punteggio/: functions.hpp
punteggio_13/: gameStructures.hpp  pacman.cpp
raffinamentoFantasmi/: functions.cpp  functions.hpp  gameStructures.hpp
riordinateFunzioni/: gameStructures.hpp  pacman.cpp  textures.hpp
siMuovonoTutti/: functions.cpp  functions.hpp  pacman.cpp
suoni/: functions.cpp  gameStructures.hpp
suoni_12/: functions.hpp  pacman.cpp
superDots/: functions.cpp  functions.hpp  pacman.cpp
